PDF generation with docker working

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,12 @@ services:
   gtd_notion_manager:
     build: .
     init: true
+    user: '${UID}:${GID}'
     image: gtd_notion_manager
     container_name: gtd_notion_manager
     restart: unless-stopped
+    volumes:
+      - ${REPORTS_DIR}:/app/reports
     environment:
       - TZ
       - GTD_DATABASE_ID
